--- a/assignments/blogs.html
+++ b/assignments/blogs.html
@@ -7,16 +7,18 @@
 </head>
 <body>
     
-<!-- In This Page I had given you all Assignment Blogs Link -->
+<!-- In This Page I had provided you all the Assignment Blogs Link -->
 <h1>Assignment Blogs</h1>
-<a href="https://internet-for-web-developers.hashnode.dev/internet-for-web-developers">Internet for Web Developers</a>
-<a href="https://everything-about-dns.hashnode.dev/domain-name-system">Everything About DNS</a>
-<a href="https://client-vs-server-side.hashnode.dev/client-side-vs-server-side">Client vs Server Side</a>
-<a href="https://osi-models-and-protocols.hashnode.dev/osi-model-and-protocols">OSI Models and Protocols</a>
-<a href="https://tcp-3-wayhandshake.hashnode.dev/tcp-3-way-handshake">TCP 3-Way Handshake</a>
-<a href="https://http-requests.hashnode.dev/http-request-methods">HTTP requests</a>
-<a href="https://html-tags-elements.hashnode.dev/html-tags-and-elements">HTML Tags and Elements</a>
-<a href="https://html-input-types.hashnode.dev/html-input-types">HTML Input Types</a>
+<ul><h2>Internet</h2></ul>
+    <li><a href="https://internet-for-web-developers.hashnode.dev/internet-for-web-developers">Internet for Web Developers</a></li>
+    <li><a href="https://everything-about-dns.hashnode.dev/domain-name-system">Everything About DNS</a></li>
+    <li><a href="https://client-vs-server-side.hashnode.dev/client-side-vs-server-side">Client vs Server Side</a></li>
+    <li><a href="https://osi-models-and-protocols.hashnode.dev/osi-model-and-protocols">OSI Models and Protocols</a></li>
+    <li><a href="https://tcp-3-wayhandshake.hashnode.dev/tcp-3-way-handshake">TCP 3-Way Handshake</a></li>
+    <li><a href="https://http-requests.hashnode.dev/http-request-methods">HTTP requests</a></li>
+    <li><a href="https://html-tags-elements.hashnode.dev/html-tags-and-elements">HTML Tags and Elements</a></li>
+    <li><a href="https://html-input-types.hashnode.dev/html-input-types">HTML Input Types</a></li>
+    <li><a href="https://specificity-algorithm.hashnode.dev/css-specificity-algorithm">CSS specificity-algorithm</a></li>
 
 </body>
 </html>
