--- a/assignments/blogs.html
+++ b/assignments/blogs.html
@@ -19,6 +19,7 @@
     <li><a href="https://html-tags-elements.hashnode.dev/html-tags-and-elements">HTML Tags and Elements</a></li>
     <li><a href="https://html-input-types.hashnode.dev/html-input-types">HTML Input Types</a></li>
     <li><a href="https://specificity-algorithm.hashnode.dev/css-specificity-algorithm">CSS specificity-algorithm</a></li>
+    <li><a href="https://css-grid-layout.hashnode.dev/css-grid">CSS Grid layout</a></li>
 
 </body>
 </html>
