--- a/assignments/blogs.html
+++ b/assignments/blogs.html
@@ -20,6 +20,10 @@
     <li><a href="https://html-input-types.hashnode.dev/html-input-types">HTML Input Types</a></li>
     <li><a href="https://specificity-algorithm.hashnode.dev/css-specificity-algorithm">CSS specificity-algorithm</a></li>
     <li><a href="https://css-grid-layout.hashnode.dev/css-grid">CSS Grid layout</a></li>
+    <li><a href="https://jsarray.hashnode.dev/array-methods">JS Array</a></li>
+    <li><a href="https://javascript-object.hashnode.dev/objects">JS Objects</a></li>
+    <li><a href="https://serialization-vs-deserialization.hashnode.dev/teleporting-a-human-serialization-vs-deserialization">JS serialization-vs-deserialization</a></li>
+    <li><a href="https://function-declaration-vs-expressions.hashnode.dev/function-declaration-vs-function-expressions">Function Declaration V/S Function Expression in Java script</a></li>
 
 </body>
 </html>
