--- a/assignments/blogs.html
+++ b/assignments/blogs.html
@@ -25,6 +25,7 @@
     <li><a href="https://serialization-vs-deserialization.hashnode.dev/teleporting-a-human-serialization-vs-deserialization">JS serialization-vs-deserialization</a></li>
     <li><a href="https://function-declaration-vs-expressions.hashnode.dev/function-declaration-vs-function-expressions">Function Declaration V/S Function Expression in Java script</a></li>
     <li><a href="https://polyfills-in-javascript.hashnode.dev/polyfills">JS Polyfills</a></li>
+    <li><a href="https://javascript-prototypes.hashnode.dev/java-script-prototypes">Prototypes in Java Script</a></li>
 
 </body>
 </html>
