Add image carousel and memory card game implementations; create shopping cart functionality; implement time clock and file handling examples

--- a/resources/blogs.html
+++ b/resources/blogs.html
@@ -26,6 +26,8 @@
     <li><a href="https://function-declaration-vs-expressions.hashnode.dev/function-declaration-vs-function-expressions">Function Declaration V/S Function Expression in Java script</a></li>
     <li><a href="https://polyfills-in-javascript.hashnode.dev/polyfills">JS Polyfills</a></li>
     <li><a href="https://javascript-prototypes.hashnode.dev/java-script-prototypes">Prototypes in Java Script</a></li>
+    <li><a href="https://prototype-and-inheritance.hashnode.dev/prototype-and-inheritance-in-js">Prototypes and Inheritance in Java Script</a></li>
+    <li><a href="https://js-date.hashnode.dev/date-in-java-script">Date in Java Script</a></li>
 
 </body>
 </html>
