Add new resources and functionalities: update blogs with new links, enhance accordion behavior, implement memory card game logic, create promise class and polyfills for array methods

--- a/resources/blogs.html
+++ b/resources/blogs.html
@@ -28,6 +28,10 @@
     <li><a href="https://javascript-prototypes.hashnode.dev/java-script-prototypes">Prototypes in Java Script</a></li>
     <li><a href="https://prototype-and-inheritance.hashnode.dev/prototype-and-inheritance-in-js">Prototypes and Inheritance in Java Script</a></li>
     <li><a href="https://js-date.hashnode.dev/date-in-java-script">Date in Java Script</a></li>
+    <li><a href="https://js-promises.hashnode.dev/promises">JS Promises</a></li>
+    <li><a href="https://java-script-blog.hashnode.dev/java-script-events">JS Events</a></li>
+    <li><a href="https://java-script-blog.hashnode.dev/beginners-guide-to-javascript-proxy">JS Proxy</a></li>
+
 
 </body>
 </html>
