--- a/week- 03/assignments/js dom challenges/memory card/index.html
+++ b/week- 03/assignments/js dom challenges/memory card/index.html
@@ -13,7 +13,7 @@
       <p>Time: <span id="time">0:00</span></p>
     </div>
     <div class="game-container" id="gameContainer"></div>
-    <button onclick="restartGame()">Restart Game</button>
+    <button onclick="restartGame()" id="button">Restart Game</button>
 
     <script src="app.js"></script>
   </body>
